CSS Syntax Cleanup and Organization
Coupled repeating declarations.
Reorganized code.
Sorted declarations alphabetically.
Added more detailed comments.
Renamed some selectors for better specificity.
Removed redundant declarations.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,12 @@
 {{ partial "head.html" . }}
 {{ partial "header.html" . }}
-<div class="main content-list">
+<main class="content-list">
   {{ range .Data.Pages.GroupByDate "2006" }}
   <div class="content-list-date">{{ .Key }}</div>
     {{ range .Pages }}
       {{ .Render "li"}}
     {{ end }}
   {{ end }}
-</div>
+</main>
 {{ partial "social.html" . }}
 {{ partial "footer.html" . }}
