--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
   <footer>
-    <div>&copy {{ .Site.Copyright }}</div>
-    <div class="divider">•</div>
+    <div>&copy{{ .Site.Copyright }}</div>
+    <div>&nbsp;&ndash;&nbsp;</div>
     {{with .Site.Params.social}}
-      <a class="nav-link" href="https://www.github.com/{{.}}/clever-laziness" target="_blank">Source</a>
+      <a class="nav-item" href="https://www.github.com/{{.}}/clever-laziness" target="_blank">Source</a>
     {{end}}
   </footer>
 
