--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,4 +1,4 @@
-<div class="social">
+<div class="social-menu">
   {{with .Site.Params.social}}
   <a class="social-item" href="https://www.twitter.com/{{.}}" target="_blank" title="Follow me on Twitter">
     <svg width="100%" height="100%" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
