--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header>
-  <a class="icon" href="{{ .Site.BaseURL }}">
+  <a class="avatar" href="{{ .Site.BaseURL }}">
     <svg width="100%" height="100%" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
       <g id="me" transform="matrix(0.0965332,0,0,0.0964795,7.91979,9.83581)">
@@ -145,9 +145,9 @@
 
   <div class="brand">Clever Laziness</div>
 
-  <nav class="nav-item">
-    <a class="nav-link" href='{{ .Site.BaseURL }}archive'>Archive</a>
-    <a class="nav-link" href='{{ .Site.BaseURL }}work'>Work</a>
-    <a class="nav-link" href='{{ .Site.BaseURL }}about'>About</a>
+  <nav class="nav-menu">
+    <a class="nav-item" href='{{ .Site.BaseURL }}work'>Work</a>
+    <a class="nav-item" href='{{ .Site.BaseURL }}about'>About</a>
+    <a class="nav-item" href='{{ .Site.BaseURL }}archive'>Archive</a>
   </nav>
 </header>
