Code highlighting and styling with Hihglight.js
Added script to run highlighting library.
Changed highlighting theme to a custom version based on the Red Graphite site theme.
Moved highlight css from seperate file to main layout file.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,8 @@
   </footer>
 
   <!-- Footnotes -->
+  <script src={{ "js/highlight.pack.js" | relURL }}></script>
+  <script>hljs.initHighlightingOnLoad();</script>
   <script src={{ "js/barefoot.js" | relURL }}></script>
   <script>
     var lf = new BareFoot({
