Palette SVG for future project and layout fixes

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -182,6 +182,12 @@ footer .nav-item {
   max-height: 600px;
 }
 
+@media screen and (max-width: 345px) {
+  .brand {
+    text-align: center;
+  }
+}
+
 
 /* STYLING */
 header,
