Nav item styling
Added hover effect on nav-item to :focus as well. This should
replicated the effect on mobile.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -261,7 +261,8 @@ a:hover,
 
 .post-content li > a:hover,
 .post-content p > a:hover,
-.nav-item:hover {
+.nav-item:hover,
+.nav-item:focus {
   border-bottom: 2px solid var(--link);
 }
 
