--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -4,14 +4,18 @@
     <img src="{{ .Get "src" }}" {{ if or (.Get "alt") (.Get "caption") }}alt="{{ with .Get "alt"}}{{.}}{{else}}{{ .Get "caption" }}{{ end }}"{{ end }} {{ with .Get "id" }}id="{{.}}"{{ end }}/>
   {{ if .Get "link"}}</a>{{ end }}
   {{ if or (or (.Get "title") (.Get "caption")) (.Get "attr")}}
-  <figcaption>{{ if isset .Params "title" }}
-  <p>{{ .Get "title" }}</p>{{ end }}
-  {{ if or (.Get "caption") (.Get "attr")}}<p>
-    {{ .Get "caption" }}
-      {{ with .Get "attrlink"}}<a href="{{.}}"> {{ end }}
-        {{ .Get "attr" }}
-        {{ if .Get "attrlink"}}</a> {{ end }}
-      </p> {{ end }}
+  <figcaption>
+  {{ if isset .Params "title" }}
+    {{ .Get "title" }}
+  {{ end }}
+  {{ if or (.Get "caption") (.Get "attr")}}
+  <p>
+  {{ .Get "caption" }}
+  {{ with .Get "attrlink"}}<a href="{{.}}">{{ end }}
+  {{ .Get "attr" }}
+  {{ if .Get "attrlink"}}</a>{{ end }}
+  </p>
+  {{ end }}
   </figcaption>
   {{ end }}
 </figure>
