Missed a file again. Wow.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -150,7 +150,7 @@
     </svg>
   </a>
 
-  <div class="brand">Clever Laziness</div>
+  <a class="brand" href="{{ .Site.BaseURL }}">Clever Laziness</a>
 
   <nav class="nav-menu">
     <a class="nav-item" href='{{ .Site.BaseURL }}work'>Work</a>
