Tag link styling changes
Found my problem. The tag class is for the div, which then has a nested
a tag. So make the corrections.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -287,8 +287,8 @@ a:hover,
 }
 
 .post-date,
-.post-tag {
-  color: var(--meta) !important;
+.post-tag a {
+  color: var(--meta);
 }
 
 .post-tag {
