--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,8 @@
   <footer>
+    <!-- Copyright -->
     <div>&copy{{ .Site.Copyright }}</div>
     <div>&nbsp;&ndash;&nbsp;</div>
+    <!-- Link to site source code -->
     {{with .Site.Params.social}}
       <a class="nav-item" href="https://www.github.com/{{.}}/clever-laziness" target="_blank">Source</a>
     {{end}}
