--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,7 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
 <head>
   <meta charset="utf-8">
+  <!-- Variable Site Title -->
   <title>
     {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "" }}
     {{ if eq $url "/" }}
@@ -37,7 +38,7 @@
   <!-- Favicon -->
   <link rel="shortcut icon" href={{ "./favicon.png" | relURL }}>
 
-  <!-- Webclip -->
+  <!-- Webclip and Apple Touch Icon -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="{{ .Site.Title }}">
