--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header>
+  <!-- Avatar and link to homepage -->
   <a class="avatar" href="{{ .Site.BaseURL }}">
     <svg width="100%" height="100%" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
       xml:space="preserve" xmlns:serif="http://www.serif.com/" fill-rule="evenodd" clip-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"
@@ -150,8 +151,10 @@
     </svg>
   </a>
 
-  <a class="brand" href="{{ .Site.BaseURL }}">Clever Laziness</a>
+  <!-- Site title and link to homepage -->
+  <h1 class="brand"><a href="{{ .Site.BaseURL }}">Clever Laziness</a></h1>
 
+  <!-- Site navigation menu -->
   <nav class="nav-menu">
     <a class="nav-item" href='{{ .Site.BaseURL }}work'>Work</a>
     <a class="nav-item" href='{{ .Site.BaseURL }}about'>About</a>
