--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-<a class="return" href="{{ .Site.Title }}" title="Back to the homepage">
+<a class="return" href="{{ .Site.BaseURL }}" title="Back to the homepage">
   <svg width="100%" height="100%" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
     xml:space="preserve" xmlns:serif="http://www.serif.com/" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round"
     stroke-miterlimit="1.41421">
