--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,7 +31,7 @@
 
   <!-- Stylesheets -->
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Rubik:400,700">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:400,500|Poppins:400,500" rel="stylesheet">
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }}>
   <link rel="stylesheet" href={{ "/css/barefoot.css" | relURL }}>
 
