--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -3,7 +3,6 @@ A general sorting is used based on impact.
 Elements are then styled using Meiert's updated blog post on "Element Sorting" (https://meiert.com/en/blog/how-to-order-css-selectors/).
 Selectors are using very specific names, so I didn't see a need for commenting those for sorting.
 */
-
 /* BASE */
 :root {
   --accent: #000000;
@@ -13,24 +12,21 @@ Selectors are using very specific names, so I didn't see a need for commenting t
   --text: #414142;
   --underline: 1.5px solid var(--accent);
 }
-
 html {
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
 }
-
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
-
 body {
   background-color: var(--background);
   color: var(--text);
   display: -ms-grid;
   display: grid;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 1rem;
   grid-template-columns:
     [full-start] minmax(1em, 1fr) 
@@ -39,37 +35,30 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
 }
-
 body > * {
   grid-column: main;
 }
-
 header {
   flex-direction: column;
   grid-column: full;
   padding: 1rem 1rem 3rem;
   text-transform: uppercase;
 }
-
 /*a:hover {
   transition: color .2s ease;
 }*/
-
 a:hover svg {
   fill: var(--link);
   /*transition: fill .2s ease;*/
 }
-
 .nav-item {
   border-bottom: 2px solid var(--accent);
 }
-
 /* LAYOUT */
 body,
 .main-content {
   height: 100%;
 }
-
 header,
 footer,
 .nav-menu,
@@ -81,7 +70,6 @@ footer,
   display: -webkit-flex;
   display: flex;
 }
-
 header,
 footer,
 .err-404,
@@ -89,216 +77,177 @@ footer,
 .social-menu {
   justify-content: center;
 }
-
 footer {
   padding: 2.5rem 0;
 }
-
 main,
 .post {
   min-height: calc(100vh - 400px);
 }
-
 figcaption {
   padding: 5px;
 }
-
 ul,
 ol {
   padding-left: 30px;
 }
-
 ol ul {
   padding-left: 20px;
 }
-
 img, 
 svg {
   width: auto;
 }
-
 a svg {
   height: 25px;
 }
-
 .avatar,
 .brand,
 .nav-menu {
   margin: 10px auto;
 }
-
 .content-item {
   padding-bottom: 1rem;
 }
-
 .content-list,
 .content-list-date,
 .post,
 .post-preview {
   padding-bottom: 2.5rem;
 }
-
 .err-404 {
   min-height: calc(100vh - 150px);
 }
-
 .err-404 img {
   max-height: 600px;
 }
-
 .nav-item,
 .social-item {
   margin: 0 10px;
 }
-
 .page-next {
   float: right;
 }
-
 .page-prev {
   float: left;
 }
-
 .portfolio {
   flex-direction: column;
 }
-
 .post-content img,
 .post-tag {
   width: 100%;
 }
-
 .post-date {
   padding-top: 10px;
 }
-
 .post-preview .post-content {
   padding: 1rem 0;
 }
-
 .post-title,
 footer .nav-item {
   margin: 0;
 }
-
 /* Back to homepage icon */
 .return {
   grid-column: full;
   margin: 20px 0 0 20px;
 }
-
 .return svg {
   height: 50px;
 }
 /****/
-
 .site-preview {
   height: auto;
   margin: 20px auto;
   max-width: 600px;
 }
-
 @media screen and (max-width: 345px) {
   .brand {
     text-align: center;
   }
 }
-
 /* STYLING */
 header,
 h1, h2, h3, h4 {
   font-weight: 700;
 }
-
 ul {
   list-style-type: disc;
 }
-
 a {
   text-decoration: none;
 }
-
 header,
 footer,
 h1, h2, h3, h4,
 .page-nav,
 .post-date,
 .post-tag {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
 }
-
 footer,
 h1, h2, h3, h4,
 a,
 .page-nav {
   color: var(--accent);
 }
-
 a:hover,
 .brand {
   color: var(--link);
 }
-
 .avatar svg {
   fill: unset;
   height: 100px;
 }
-
 .avatar svg:hover {
   fill: unset;
 }
-
+.brand {
+  font-weight: 500;
+}
 .brand,
 .post-title {
   font-size: 2rem;
 }
-
 .content-list-date,
 .post-title,
 .post-date {
   text-align: center;
 }
-
 .content-list-date {
   font-size: 1.85rem;
 }
-
 .hljs,
 .site-preview {
   background: #fff;
   border: 1px solid var(--meta);
   box-shadow: 8px 8px 0 0 var(--text);
 }
-
 .post-content {
   line-height: 26px;
 }
-
 .post-content li > a,
 .post-content p > a {
   border-bottom: 2px dotted var(--accent);
 }
-
 .post-content li > a:hover,
 .post-content p > a:hover,
 .nav-item:hover,
 .nav-item:focus {
   border-bottom: 2px solid var(--link);
 }
-
 .post-date,
 .post-tag a {
   color: var(--meta);
 }
-
 .post-tag {
   text-align: end;
 }
-
 /*.post-title a:hover {
   transition: color .2s ease-in-out;
 }*/
-
 .site-preview a:hover {
   color: unset;
 }
