Code cleanup and Analytics
Who am I kidding, I need the analytics. I don’t have an audience yet to justify removing it. So for now, it goes back.
Also did some refactoring to a more semantic HTML.
And some minor layout adjustments.

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,4 +1,4 @@
-<div class="content-item">
+<article class="content-item">
   <h2 class="post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
   <div class="post-date">{{ .Date.Format "2006-01-02" }}</div>
-</div>
+</article>
