--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
   <footer>
     <!-- Copyright -->
-    <div>&copy{{ .Site.Copyright }}</div>
-    <div>&nbsp;&ndash;&nbsp;</div>
+    <p>&copy{{ .Site.Copyright }}</p>
+    <p>&nbsp;&ndash;&nbsp;</p>
     <!-- Link to site source code -->
     {{with .Site.Params.social}}
       <a class="nav-item" href="https://www.github.com/{{.}}/clever-laziness" target="_blank">Source</a>
