--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,5 +1,5 @@
 <!-- Social Icon Links -->
-<div class="social-menu">
+<nav class="social-menu">
   <!-- Twitter icon and link -->
   {{with .Site.Params.social}}
   <a class="social-item" href="https://www.twitter.com/{{.}}" target="_blank" title="Follow me on Twitter">
@@ -53,4 +53,4 @@
       </g>
     </svg>
   </a>
-</div>
+</nav>
