--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,11 +3,11 @@
 <article class="post">
   <h2 class="post-title">{{ .Title }}</h2>
   {{ if .Params.showthedate }}
-    <div class="post-date">{{ .Date.Format "2006-01-02" }}</div>
+    <p class="post-date">{{ .Date.Format "2006-01-02" }}</p>
   {{ end }}
-  <div class="post-content">{{ .Content }}</div>
+  <section class="post-content">{{ .Content }}</section>
   {{ range .Params.tags }}
-    <div class="post-tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></div>
+    <section class="post-tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></section>
   {{ end }}
 </article>
 {{ partial "social.html" . }}
