--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,7 +1,7 @@
 <article class="post-preview">
   <h2 class="post-title"><a href='{{ .Permalink }}' >{{ .Title }}</a></h2>
   {{ if .Params.showthedate }}
-    <div class="post-date">{{ .Date.Format "2006-01-02" }}</div>
+    <p class="post-date">{{ .Date.Format "2006-01-02" }}</p>
   {{ end }}
-  <div class="post-content">{{ .Summary }}</div>
+  <section class="post-content">{{ .Summary }}</section>
 </article>
