--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -46,5 +46,15 @@
   <link rel="apple-touch-icon" sizes="167x167" href={{ "/apple-touch-icon-167x167.png" | relURL }}>
   <link rel="apple-touch-icon" sizes="180x180" href={{ "/apple-touch-icon-180x180.png" | relURL }}>
   <link rel="mask-icon" color="#D7545E" href={{ "/safari-pinned-tab.svg" | relURL }}>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.Params.google.analytics.trackerID }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', '{{ .Site.Params.google.analytics.trackerID }}');
+  </script>
 </head>
 <body>
