--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -32,6 +32,7 @@ body {
     [full-start] minmax(1em, 1fr) 
     [main-start] minmax(0, 44rem) [main-end]
     minmax(1em, 1fr) [full-end];
+  margin: 0;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -44,12 +45,8 @@ header {
   padding: 1rem 1rem 3rem;
   text-transform: uppercase;
 }
-/*a:hover {
-  transition: color .2s ease;
-}*/
 a:hover svg {
   fill: var(--link);
-  /*transition: fill .2s ease;*/
 }
 .nav-item {
   border-bottom: 2px solid var(--accent);
@@ -80,6 +77,11 @@ footer,
 footer {
   padding: 2.5rem 0;
 }
+footer p,
+.content-list h2,
+.post-date {
+  margin: 0;
+}
 main,
 .post {
   min-height: calc(100vh - 400px);
@@ -98,8 +100,8 @@ img,
 svg {
   width: auto;
 }
-a svg {
-  height: 25px;
+.avatar svg {
+  height: 6.25em;
 }
 .avatar,
 .brand,
@@ -162,6 +164,9 @@ footer .nav-item {
   margin: 20px auto;
   max-width: 600px;
 }
+.social-menu a svg {
+  height: 25px;
+}
 @media screen and (max-width: 345px) {
   .brand {
     text-align: center;
@@ -199,17 +204,16 @@ a:hover,
 }
 .avatar svg {
   fill: unset;
-  height: 100px;
 }
 .avatar svg:hover {
   fill: unset;
 }
 .brand {
+  font-size: 4em;
   font-weight: 500;
 }
-.brand,
 .post-title {
-  font-size: 2rem;
+  font-size: 2.25em;
 }
 .content-list-date,
 .post-title,
@@ -217,13 +221,13 @@ a:hover,
   text-align: center;
 }
 .content-list-date {
-  font-size: 1.85rem;
+  font-size: 1.85em;
 }
 .hljs,
 .site-preview {
   background: #fff;
   border: 1px solid var(--meta);
-  box-shadow: 8px 8px 0 0 var(--text);
+  
 }
 .post-content {
   line-height: 26px;
@@ -245,9 +249,6 @@ a:hover,
 .post-tag {
   text-align: end;
 }
-/*.post-title a:hover {
-  transition: color .2s ease-in-out;
-}*/
 .site-preview a:hover {
   color: unset;
 }
