Further Analytics adjustments
Added User-ID tracking.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -53,7 +53,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-  
+    gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
     gtag('config', '{{ .Site.Params.google.analytics.trackerID }}');
   </script>
 </head>
