--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -209,7 +209,7 @@ a:hover,
   fill: unset;
 }
 .brand {
-  font-size: 4em;
+  font-size: 2.5em;
   font-weight: 500;
 }
 .post-title {
@@ -227,7 +227,7 @@ a:hover,
 .site-preview {
   background: #fff;
   border: 1px solid var(--meta);
-  
+  box-shadow: 8px 8px 0 0 var(--text);
 }
 .post-content {
   line-height: 26px;
