--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -56,5 +56,13 @@
     gtag('set', {'user_id': 'USER_ID'}); // Set the user ID using signed-in user_id.
     gtag('config', '{{ .Site.Params.google.analytics.trackerID }}');
   </script>
+  
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3427320574239181",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
