Changes and optimizations
Moved to baseOf template.
Updated avatar assets.
Removed Work section and replaced with link to external contact site.
Removed CodePen icon and link.
Removed unnecessary assets.

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ define "main" }}
 <a class="return" href="{{ .Site.BaseURL }}" title="Back to the homepage">
   <svg width="100%" height="100%" viewBox="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
     xml:space="preserve" xmlns:serif="http://www.serif.com/" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round"
@@ -13,3 +13,4 @@
   <img src={{ "/404.svg" | relURL }} alt="">
 </div>
 {{ partial "footer.html" . }}
+{{ end }}
