--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ define "main" }}
 {{ partial "header.html" . }}
 <main>
   {{ $paginator := .Paginate (where .Data.Pages "Type" "archive") 10 }}
@@ -9,3 +9,4 @@
 {{ partial "paginator.html" . }}
 {{ partial "social.html" . }}
 {{ partial "footer.html" . }}
+{{ end }}
