Syntax highlighting and meta updates
Replaced Highlight.js with built-in Chroma syntax highlighting.
Included author on posts. Visible to readers but visually hidden.
Updated spacing and color for list template dates.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,6 +34,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,500|Poppins:400,500" rel="stylesheet">
   <link rel="stylesheet" href={{ "/css/layout.css" | relURL }}>
   <link rel="stylesheet" href={{ "/css/barefoot.css" | relURL }}>
+  <link rel="stylesheet" href={{ "/css/syntax.css" | relURL }}>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href={{ "./favicon.png" | relURL }}>
