--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,9 +8,7 @@
   {{end}}
 </footer>
 
-<!-- Footnotes -->
-<script src={{ "js/highlight.pack.js" | relURL }}></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<!-- Scripts -->
 <script src={{ "js/barefoot.js" | relURL }}></script>
 <script>
   var lf = new BareFoot({
