--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,6 +5,7 @@
   {{ if .Params.showthedate }}
     <p class="post-date">{{ .Date.Format "2006-01-02" }}</p>
   {{ end }}
+  <p class="post-author">by {{ .Site.Author.name }}</p>
   <section class="post-content">{{ .Content }}</section>
   {{ range .Params.tags }}
     <section class="post-tag"><a href="/tags/{{ . | urlize }}">#{{.}}</a></section>
