--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -3,5 +3,6 @@
   {{ if .Params.showthedate }}
     <p class="post-date">{{ .Date.Format "2006-01-02" }}</p>
   {{ end }}
+  <p class="post-author">by {{ .Site.Author.name }}</p>
   <section class="post-content">{{ .Summary }}</section>
 </article>
