--- a/layouts/shortcodes/ads.html
+++ b/layouts/shortcodes/ads.html
@@ -1,4 +1,4 @@
-<div id="ad" class="add-inline">
+<div id="ad" class="ad-inline">
      <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
      <ins class="adsbygoogle"
           style="display:block; text-align:center;"
@@ -9,5 +9,5 @@
      <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
      </script>
-     <span class="add-label">Advertisement</span>
+     <span class="ad-label">Advertisement</span>
 </div>
