--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,9 @@
   <main class="list">
     <article class="post">
       <h1 class="title">{{ .Title }}</h1>
+      {{ if eq .Title "Bookmarks" }}
+        {{ partial "book-cats.html" . }}
+      {{ end }}
       {{ partial "date.html" . }}
       <section class="content">{{ .Content }}</section>
     </article>
